tests/compile_fail/ktstr_test_max_numa_nodes_zero.stderr
error: max_numa_nodes must be > 0 (a zero cap excludes every host from the gauntlet — use a non-zero cap, or omit the field to inherit the scheduler-level default)
 --> tests/compile_fail/ktstr_test_max_numa_nodes_zero.rs:3:1
  |
3 | #[ktstr_test(max_numa_nodes = 0)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ktstr_test` (in Nightly builds, run with -Z macro-backtrace for more info)
